# mlmodels

./: .gitignore  CMakeLists.txt  README.md
associators/phaseLink/inference/: arrival.cpp  inference.cpp  openvino.hpp  pick.cpp  utahNormalizationHelpers.hpp  ynpNormalizationHelpers.hpp
cmake/: UUSSMLModelsConfig.cmake.in
deepLearning/: README.md
deepLearning/apply/: CMakeLists.txt  INSTALL.md
deepLearning/apply/include/private/: loadHDF5Weights.hpp  version.hpp.in
deepLearning/apply/include/uuss/: enums.hpp
deepLearning/apply/include/uuss/amplitudes/: localMagnitudeProcessing.hpp
deepLearning/apply/include/uuss/firstMotion/fmnet/: model.hpp  processData.hpp
deepLearning/apply/include/uuss/forwardSimulation/eikonet/: model.hpp
deepLearning/apply/include/uuss/oneComponentPicker/zcnn/: model.hpp  processData.hpp
deepLearning/apply/include/uuss/threeComponentPicker/zcnn/: model.hpp  processData.hpp
deepLearning/apply/include/uuss/threeComponentPicker/zrunet/: model.hpp  processData.hpp
deepLearning/apply/python/: pyuussmlmodels.cpp  unit_tests.py
deepLearning/apply/python/amplitudes/: localMagnitudeProcessing.cpp  localMagnitudeProcessing.hpp
deepLearning/apply/python/firstMotion/: processData.cpp  processData.hpp
deepLearning/apply/python/oneComponentPicker/: model.hpp  processData.cpp  processData.hpp
deepLearning/apply/python/threeComponentPicker/: processData.cpp  processData.hpp
deepLearning/apply/src/: version.cpp
deepLearning/apply/src/amplitudes/: localMagnitudeProcessing.cpp
deepLearning/apply/src/firstMotion/fmnet/: model.cpp  processData.cpp
deepLearning/apply/src/forwardSimulation/eikonet/: model.cpp
deepLearning/apply/src/oneComponentPicker/zcnn/: model.cpp  processData.cpp
deepLearning/apply/src/threeComponentPicker/zcnn/: model.cpp  processData.cpp
deepLearning/apply/src/threeComponentPicker/zrunet/: model.cpp  processData.cpp
deepLearning/apply/testing/: eikonet.cpp  fmnet.cpp  main.cpp  zrcnn.cpp  zrunet.cpp
detectors/uNetOneComponentP/inference/: inference.cpp  openvino.hpp  utilities.hpp
detectors/uNetOneComponentP/models/: README.md  generateReference.py  modelConverter.py  unet.py
detectors/uNetOneComponentP/preprocessing/: preprocessing.cpp
detectors/uNetThreeComponentP/inference/: inference.cpp  openvino.hpp  utilities.hpp
detectors/uNetThreeComponentP/models/: unet.py
detectors/uNetThreeComponentP/preprocessing/: preprocessing.cpp
detectors/uNetThreeComponentS/inference/: inference.cpp
detectors/uNetThreeComponentS/models/: README.md
detectors/uNetThreeComponentS/preprocessing/: preprocessing.cpp
eventClassifiers/cnnThreeComponent/preprocessing/: preprocessing.cpp
features/: CMakeLists.txt  LICENSE
features/cmake/: FindGeographicLibConfig.cmake  FindRTSeisConfig.cmake
features/include/private/: distanceAzimuth.hpp  magnitudeUtilities.hpp  version.hpp.in
features/include/uuss/features/magnitude/: channel.hpp  channelFeatures.hpp  hypocenter.hpp  pFeatures.hpp  preprocess.hpp  sFeatures.hpp  spectralFeatures.hpp  temporalFeatures.hpp  threeChannelFeatures.hpp  verticalChannelFeatures.hpp
features/python/: pyuussFeatures.cpp
features/python/magnitude/: initialize.hpp  wrap.cpp
features/src/: version.cpp
features/src/features/magnitude/: channel.cpp  channelFeatures.cpp  hypocenter.cpp  pFeatures.cpp  preprocess.cpp  sFeatures.cpp  spectralFeatures.cpp  temporalFeatures.cpp  threeChannelFeatures.cpp  verticalChannelFeatures.cpp
features/testing/data/: sru_enz_hhz.txt  wy_yhb_hhn_hhe_01_60000622.txt
features/testing/magnitude/: magnitudes.cpp
firstMotionClassifiers/cnnOneComponentP/inference/: inference.cpp  openvino.hpp
firstMotionClassifiers/cnnOneComponentP/models/: README.md  fmnet.py  generateReference.py  modelConverter.py
firstMotionClassifiers/cnnOneComponentP/preprocessing/: preprocessing.cpp
include/private/: h5io.hpp  version.hpp.in
include/uussmlmodels/associators/phaseLink/: arrival.hpp  inference.hpp  pick.hpp
include/uussmlmodels/detectors/uNetOneComponentP/: inference.hpp  preprocessing.hpp
include/uussmlmodels/detectors/uNetThreeComponentP/: inference.hpp  preprocessing.hpp
include/uussmlmodels/detectors/uNetThreeComponentS/: inference.hpp  preprocessing.hpp
include/uussmlmodels/eventClassifiers/cnnThreeComponent/: preprocessing.hpp
include/uussmlmodels/firstMotionClassifiers/cnnOneComponentP/: inference.hpp  preprocessing.hpp
include/uussmlmodels/pickers/cnnOneComponentP/: inference.hpp  preprocessing.hpp
include/uussmlmodels/pickers/cnnThreeComponentS/: inference.hpp  preprocessing.hpp
pickers/cnnOneComponentP/inference/: inference.cpp  openvino.hpp
pickers/cnnOneComponentP/models/: README.md  cnnnet.py  generateReference.py  modelConverter.py
pickers/cnnOneComponentP/preprocessing/: preprocessing.cpp
pickers/cnnThreeComponentS/inference/: inference.cpp  openvino.hpp
pickers/cnnThreeComponentS/models/: README.md  cnnnet.py  generateReference.py
pickers/cnnThreeComponentS/preprocessing/: preprocessing.cpp
python/: buffer.hpp  detectors.cpp  detectors.hpp  eventClassifiers.cpp  eventClassifiers.hpp  firstMotionClassifiers.cpp  firstMotionClassifiers.hpp  pickers.cpp  pickers.hpp  pyuussmlmodels.cpp  unit_test.py
testing/associators/: phaseLink.cpp
testing/data/eventClassifiers/cnnThreeComponent/: UU.NOQ.HH.ZNE.01_eq.csv
testing/data/firstMotionClassifiers/cnnOneComponentP/: fmnetTestOutputs.txt
testing/data/pickers/cnnOneComponentP/: cnnnetTestOutputs.txt
testing/detectors/: uNetOneComponentP.cpp  uNetThreeComponentP.cpp  uNetThreeComponentS.cpp
testing/eventClassifiers/: cnnThreeComponent.cpp
testing/firstMotionClassifiers/: cnnOneComponentP.cpp
testing/pickers/: cnnOneComponentP.cpp  cnnThreeComponentS.cpp
